# controllers/productController.js
@@ -2,6 +2,7 @@ const Product = require("../models/product");
 const BigPromise = require("../middleware/bigPromise");
 const CustomError = require("../utils/customError");
 const cloudinary = require("cloudinary").v2;
+const WhereClause = require("../utils/whereClause");
 
 
 // add product
@@ -11,19 +12,19 @@ exports.addProduct = BigPromise(async (req, res, next) => {
 
     // any field is missing
     if (!(name && price && description && category && stock && brand)) {
-        return next(new CustomError('All Fields Are Mandatory!', 400));
+        return next(CustomError(res, "All Fields Are Mandatory!", 400));
     }
 
     // product is already in db
     const productDB = await Product.findOne({ name });
 
     if (productDB) {
-        return next(new CustomError("Product With This Name Already Exists", 400));
+        return next(CustomError(res, "Product Name Already Exists", 400));
     }
 
     // no photo is passed
     if (!req.files) {
-        return next(new CustomError("Photo is required", 401));
+        return next(CustomError(res, "Photo is required", 401));
     }
 
     // upload photo
@@ -64,3 +65,53 @@ exports.addProduct = BigPromise(async (req, res, next) => {
     });
 
 })
+
+
+// filter product -- if no query return all product else filter via query
+exports.filterProduct = BigPromise(async (req, res, next) => {
+
+    // result in one page
+    let resultPerPage = 3;
+
+    // if passed limit per page
+    if (req.query.limit) {
+        resultPerPage = req.query.limit;
+    }
+
+    // total product in db
+    const totalProducts = await Product.countDocuments();
+
+    // filter via query
+    const productObj = new WhereClause(Product.find(), req.query).search().filter();
+
+    // total filtered products
+    let product = await productObj.baseURL;
+    const totalFilteredResults = product.length;
+
+    // pagination
+    productObj.pager(resultPerPage);
+    product = await productObj.baseURL.clone();
+
+    // response
+    res.status(200).json({
+        success: true,
+        product,
+        resultPerPage,
+        totalFilteredResults,
+        totalProducts,
+    })
+
+})
+
+
+// get all products admin
+exports.adminGetAllProducts = BigPromise(async (req, res, next) => {
+
+    const products = await Product.find();
+
+    res.status(200).json({
+        success: true,
+        products,
+    })
+
+});
